# moonlabel

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/src/: api.py  convert.py  infer.py  models.py
frontend/: index.html  package.json
frontend/src/: App.css
frontend/src/components/: Home.tsx  ResultsPanel.tsx  Settings.tsx  UploadArea.tsx
scripts/: embed_ui.py
src/moonlabel/: __init__.py  dataset.py  infer.py  types.py
src/moonlabel/server/: api.py
src/moonlabel/server/static/: index.html
src/moonlabel/server/static/assets/: index-B35qHQaK.js  index-DB7ln7np.js  index-DnE2tSy4.css  index-DycqzLb4.js  index-ozv8hWk5.js
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx
ui/src/components/: Home.tsx  ResultsPanel.tsx  Settings.tsx  UploadArea.tsx
ui/src/contexts/: ThemeContext.tsx  theme-core.ts  useTheme.ts
